--- a/css/index3css.css
+++ b/css/index3css.css
@@ -27,10 +27,11 @@ h1 {
 	color: #fff;
 }
 
+/* График */
 #rod canvas {
-	border: solid #EEE 2px;
+	border: solid #EEE 3px;
 	border-radius: 25px;
-
+	box-shadow: -5px -5px 0.8em 1px #000;
 }
 
 
@@ -61,7 +62,6 @@ h1 {
 
 /* Ссылки в меню */
 .menu a {
-
     padding: 20px 0px 0px 15px;
     text-decoration: none;
     color: #6F947E;
@@ -77,7 +77,7 @@ h1 {
 /* Время */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .showtime {
-    padding: 430px 8px 6px 15px;
+    padding: 460px 8px 6px 15px;
     text-decoration: underline;
     color: #C4CA98;
     display: absolute;
@@ -100,6 +100,7 @@ h1 {
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+    
     &::before {
       position: absolute;
       content: '';
@@ -183,17 +184,22 @@ input[type=range]::-webkit-slider-thumb {
   background-blend-mode: overlay;
   box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.35) inset, 0 1px 1px 1px rgba(255, 255, 255, 0.25) inset, 0 0 2px 2px rgba(0, 0, 0, 0.15) inset, 0 1px 1px 1px rgba(0, 0, 0, 0.35), 0 3px 2px 1px rgba(0, 0, 0, 0.25), 0 6px 4px 3px rgba(0, 0, 0, 0.15);
   border-radius: 1.5rem;
-  cursor: pointer;
   -webkit-appearance: none;
+  cursor: grab;
+}
 
+body input[type=range]::-webkit-slider-thumb:active {
+  cursor: grabbing;
 }
 
 /* Подписи ползунка  */
 datalist {
+  font-size: 90%;
+  font-family: 'Ubuntu';
   display: inline-flex;
   width: 73rem;
-  height: 3rem;
-   margin: 0 0.35rem;
+  height: 2.2rem;
+  margin: 0 0.35rem;
   justify-content: space-between;
   color: #382b2f;
   line-height: 1.25;
@@ -231,3 +237,6 @@ datalist > option:before {
 
 
 
+.graph {
+	background: #fff;
+}
