--- a/css/site.css
+++ b/css/site.css
@@ -1,14 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+* {
+  font-size: 100%;
+  font-family: 'Ubuntu';
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+
+/* Проверка границ
+table,td,tr,th
+{
+border: 4px solid #fff;}
+*/
+
 body{
   background: linear-gradient(270deg,#000, #3c030f);;
   background-attachment: fixed;
   background-size: 100%;
-  margin-left: 160px; /* Поставить такой же, как и ширину боковой панели */
+  margin-left: 170px; /* Поставить такой же, как и ширину боковой панели */
   padding: 0px 10px;
 }
 
-.menu {
 
+
+li{
+  list-style-type: none ;
+}
+
+.menu {
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 160px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -50,11 +69,10 @@ body{
 /* Время */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .showtime {
-    padding: 430px 8px 6px 15px;
+    padding: 420px 8px 6px 15px;
     text-decoration: underline;
     color: #C4CA98;
     display: absolute;
-
 }
 
 #presets {
@@ -69,6 +87,7 @@ body{
   border-radius:7px; 
   margin-bottom: 5px;
   background-color: #000000;
+  box-shadow: 0 0 0.3em 1px #200, 10px 0 0.3em  0.2em #000;;
 }
 
 .control{
@@ -132,5 +151,85 @@ border: 2px solid rgb(160 160 160);
   }
 }
 
+th{
+  font-size: 130%;
+}
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*Слайдеры*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 
+body input[type=range] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 180px;
+  background-color: transparent;
+  outline: 3px   hsl(0, 0%, 0%);
+
+}
+body input[type=range]:focus {
+  outline-color: #f8b195;
+}
+
+/* Черта Градиент */
+body input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 10px;
+  background: linear-gradient(to right, #5555ff 0%, #ffa000 40%, #ff0000 90%);
+  box-shadow: 1px 1px 1em 2px #000000, -0.5px -0.5px 0.15em 0px #ffffff
+}
+
+/*Ползунок */
+body input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  border:  3px solid #fff;
+  border-radius: 70%;
+  height: 20px;
+  width: 20px;
+  position: relative;
+  bottom: 8px;
+  background: #000;
+  background-size: 50%;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 1);
+  cursor: grab;
+}
+body input[type=range]::-webkit-slider-thumb:active {
+  cursor: grabbing;
+}
+
+/*Ползунок со временем */
+#ctlTime{
+  width: 420px;
+  &::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 10px;
+  background: linear-gradient(to right, #aaa 0%, #bbb 50%, #ccc 90%);
+  box-shadow: 2px 1px 1em 2px #000000, -0.5px -0.5px 0.1em 0px #cccccc  -webkit-appearance: none;
+}
+}
+
+/* Загрузка */
+.loader {
+    width: 35px;
+    height: 35px;
+    border: 5px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
