--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 * {
   font-size: 100%;
-  font-family: 'Ubuntu';
+  font-family: 'Neucha'; 
   margin: 0;
   padding: 0;
   outline: none;
@@ -28,16 +29,16 @@ li{
 }
 
 .menu {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    font-size: 150%;
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  font-size: 150%;
   font-family: 'Ubuntu';
   margin: 0;
   padding: 0;
@@ -65,6 +66,12 @@ li{
     color: #f1f1f1;
 }
 
+
+.pixel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* Время */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -87,7 +94,7 @@ li{
   border-radius:7px; 
   margin-bottom: 5px;
   background-color: #000000;
-  box-shadow: 0 0 0.3em 1px #200, 10px 0 0.3em  0.2em #000;;
+  box-shadow:  10px 0 0.3em  0.2em #000;;
 }
 
 .control{
@@ -109,16 +116,19 @@ border: 2px solid rgb(160 160 160);
     .menu a {font-size: 18px;}
 }
 
-  .knopki {
+    .knopki {
     font-weight: 600;
     color: #382b22;
-    text-transform: uppercase;
+    font-family: 'Oswald';
+    font-weight: 600;
+    font-size: 120%;
     padding: 1.25em 2em;
     background: #ffffff;
     border: 2px solid #b18597;
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+    
     &::before {
       position: absolute;
       content: '';
@@ -153,6 +163,7 @@ border: 2px solid rgb(160 160 160);
 
 th{
   font-size: 130%;
+  
 }
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -210,6 +221,7 @@ body input[type=range]::-webkit-slider-thumb:active {
   height: 10px;
   background: linear-gradient(to right, #aaa 0%, #bbb 50%, #ccc 90%);
   box-shadow: 2px 1px 1em 2px #000000, -0.5px -0.5px 0.1em 0px #cccccc  -webkit-appearance: none;
+  text-align: center;
 }
 }
 
