--- a/css/index3css.css
+++ b/css/index3css.css
@@ -3,32 +3,39 @@
 
 
 * {
-	font-size: 100%;
-	font: optional: 'Ubuntu';
-	margin: 0;
-	padding: 0;
-	outline: none;
+  font-size: 100%;
+  font: optional: 'Ubuntu';
+  margin: 0;
+  padding: 0;
+  outline: none;
+  list-style-type: none;
 }
 
 body {
 	background: linear-gradient(90deg,#826788,#826788);;
 	background-attachment: fixed;
 	background-size: 100%;
+  margin-left: 10%; /* Поставить такой же, как и ширину боковой панели */
   font-family: 'Oswald';
   font-weight: 700;
 }
 
 h1 {
 	width: 100%;
+  height: 100%;
 	text-align: center;
 	color: #fff;
-	font-size: 40px;
-  -webkit-text-stroke: 0.7px #704153;
-  text-shadow: 0px 3px 1px #b18597;
+	font-size: 180%;
+  -webkit-text-stroke: 0.07rem #704153;
+  text-shadow: 0px 0.2rem 0.05rem #b18597;
+}
+
+.headesthead{
+  font-size: 4rem;
 }
 
 #rod, #presets, #options {
-	margin-top: 3vh;
+	margin-top: 4vh;
 	width: 100%;
 	text-align: center;
 	color: #fff;
@@ -37,82 +44,92 @@ h1 {
 /* График */
 #rod canvas {
 	border: solid #EEE 3px;
+  width: 96%;
 	border-radius: 25px;
 	box-shadow: -5px -5px 0.8em 1px #000;
 }
 
-
-
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-/* Меню */
+                                                       /* Меню */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-  .menu {
-  	display: absolute;
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    font-size: 150%;
+.menu {
+  display: absolute;
+  height: 100%; 
+  width: 10%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
+  position: fixed; /* Остается на месте при скролле */
+  z-index: 1; 
+  top: 1; 
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden; /* Отключить горизонтальный сроллl */
+  padding-top: 20px;
+  font-size: 180%;
+  font-weight: 700;
 	font-family: 'Ubuntu';
-  
 	margin: 0;
 	padding: 0;
 	outline: none;
 	box-shadow: 0 0 0 7px #222222;
-	list-style-type: none;
-	
+}
+
+.menu table,.menu td{
+  text-align: start;
+  align-content: start;
+  height: 100%;
+  width: 100%;
 }
 
 /* Ссылки в меню */
 .menu a {
-    padding: 20px 0px 0px 15px;
-    text-decoration: none;
-    color: #6F947E;
-    display: block;
+  padding: 10px 0px 0px 15px;
+  text-decoration: none;
+  color: #6F947E;
+  display: grid;
+  margin-top:2vh; /* Расстояние между ссылками */
+  text-shadow: 2px 2px #333, 4px 4px 4px #000;
 }
+
 
 /* Смена цввета при наведении */
 .menu a:hover {
     color: #f1f1f1;
+    text-shadow: 3px 3px 1px #000;
 }
 
+
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-/* Время */
+                                                      /* Время */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .showtime {
-    padding: 420px 8px 6px 15px;
-    text-decoration: underline;
+    padding: 0 8px 6px 15px;
     color: #C4CA98;
-    display: absolute;
-    
-
+    display: grid;
+    text-shadow: 2px 2px #333, 4px 4px 4px #000;
 }
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* 
-Кнопки
-Оригинал: https://codepen.io/kathykato/pen/gOOjgmP
+                                                        Кнопки
+                                Оригинал: https://codepen.io/kathykato/pen/gOOjgmP
 */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
   .knopki {
+    margin-top: -3vh;
+    width: 10%;
+    height: 20%;
     font-weight: 600;
     color: #382b22;
     font-family: 'Oswald';
     font-weight: 600;
     font-size: 120%;
-    padding: 1.25em 2em;
+    padding: 1.5% 2%;
     background: #ffffff;
     border: 2px solid #b18597;
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-    
-    &::before {
+    }
+.knopki::before {
       position: absolute;
       content: '';
       width: 100%;
@@ -127,7 +144,8 @@ h1 {
       transform: translate3d(0, 0.75em, -1em);
       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
     }
-    &:hover {
+  
+.knopki:hover {
       background: #ffeeee;
       transform: translate(0, 0.25em);
       cursor:pointer;
@@ -136,19 +154,18 @@ h1 {
         transform: translate3d(0, 0.5em, -1em);
       }
     }
-    &:active {
+
+  
+.knopki:active {
       color: #ffffff;
       background: #000000;
       cursor:grabbing;
       transition: background-color 0.2s ease-in-out;
 	}
-}
 
 
-/* Надпись над слайдером  */
-#options {
-	font-size: 30px;
-}
+
+
 
 #slidercontainer {
 	width: 75%;
@@ -157,16 +174,15 @@ h1 {
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* 
-Слайдер
-Оригинал: https://codepen.io/anthorr/pen/poZJVmY
+                                                        Слайдер
+                                    Оригинал: https://codepen.io/anthorr/pen/poZJVmY
 */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 input[type=range] {
   text-align: center;
-  width: 72.7rem;
+  width: 90%;
   height: 1.25rem;
-
   -webkit-appearance: none;
   background: linear-gradient(180deg, #b18597, #ffe3e2, #ffffff);
   border-radius: 1rem;
@@ -185,6 +201,7 @@ input[type=range]::-webkit-slider-runnable-track {
   margin: 0 0.5rem;
   border: solid #000 0.07rem;
   border-radius: 1rem;
+  
 }
 
 /*Ползунок */
@@ -209,7 +226,7 @@ datalist {
   font-size: 90%;
   font-family: 'Oswald';
   display: inline-flex;
-  width: 72.72rem;
+  width: 91%;
   height: 2.2rem;
   margin: 0 0.35rem;
   justify-content: space-between;
@@ -225,13 +242,18 @@ datalist > option {
   z-index: 1;
   display: flex;
   position: relative;
-  padding: 0 0.25rem;
+  padding: 0 0.75rem;
   border: 1px solid #b18597;
   background: #ffffff;
   border-radius: 0.5rem;
   text-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 0 1.3px #b18597, 0 0.15em 0 0 #ffe3e2;
       transform: translate3d(0, -0.38em, -1em);
+}
+
+/* Надпись под слайдером  */
+#options {
+  font-size: 190%;
 }
 
 /*Соединение */
