--- a/css/site.css
+++ b/css/site.css
@@ -2,92 +2,107 @@
 
 * {
   font-size: 100%;
-  font-family: 'Neucha'; 
+  font: optional: 'Ubuntu';
   margin: 0;
   padding: 0;
   outline: none;
+  list-style-type: none;
 }
 
-/* Проверка границ
-table,td,tr,th
-{
-border: 4px solid #fff;}
-*/
+/* Проверка границtable,td,tr,th
+{border: 1px solid #fff;}*/
+
+
 
 body{
-  background: linear-gradient(270deg,#000, #3c030f);;
+  background: linear-gradient(270deg,#000,#3c030f);
   background-attachment: fixed;
   background-size: 100%;
-  margin-left: 170px; /* Поставить такой же, как и ширину боковой панели */
-  padding: 0px 10px;
+  margin-left: 10%; /* Поставить такой же, как и ширину боковой панели */
+  color:#fff;
 }
 
 
-
-li{
-  list-style-type: none ;
-}
 
 .menu {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
+  display: absolute;
+  height: 100%; 
+  width: 10%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
+  position: fixed; /* Остается на месте при скролле */
+  z-index: 1; 
+  top: 1; 
   left: 0;
   background-color: #111;
-  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-x: hidden; /* Отключить горизонтальный сролл */
   padding-top: 20px;
-  font-size: 150%;
+  font-size: 180%;
+  font-weight: 700;
   font-family: 'Ubuntu';
   margin: 0;
   padding: 0;
   outline: none;
-  box-shadow: 0 0 0 7px #222222;
-  list-style-type: none;
-  text-shadow: 10px;
+  box-shadow: 0 0 0.15em 4px #000;
+
 }
 
-.game{
-  display: flex;
+.menu table,.menu td{
+  text-align: start;
+  align-content: start;
+  height: 100%;
+  width: 100%;
 }
 
 
 /* Ссылки в меню */
 .menu a {
-    padding: 20px 0px 0px 15px;
-    text-decoration: none;
-    color: #6F947E;
-    display: block;
+  padding: 10px 0px 0px 15px;
+  text-decoration: none;
+  color: #6F947E;
+  display: grid;
+  margin-top:2vh; /* Расстояние между ссылками */
+  text-shadow: 2px 2px #333, 4px 4px 4px #000;
 }
 
 /* Смена цввета при наведении */
 .menu a:hover {
     color: #f1f1f1;
+    text-shadow: 3px 3px 1px #000;
 }
 
 
-.pixel {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* Время */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .showtime {
-    padding: 420px 8px 6px 15px;
-    text-decoration: underline;
+    padding: 0 8px 6px 15px;
     color: #C4CA98;
-    display: absolute;
+    display: grid;
+    text-shadow: 2px 2px #333, 4px 4px 4px #000;
 }
 
-#presets {
-  margin-top: 3vh;
-  width: 100%;
-  text-align: center;
-  color: #fff;
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/* Страница */
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/* Заголовок */
+.headesthead{
+  font-size: 2.5rem;
+  margin: 10px;
 }
+
+table,tr,th{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+
+
+.board, .Heat{
+  width: 700px;
+  width: 700px;
+}
+
 
 .Heat{
   border:5px solid #000000; 
@@ -104,7 +119,7 @@ li{
   background-color:#fff;
 }
 
-.control th {
+.control td {
 border: 2px solid rgb(160 160 160);
   padding: 10px 10px;
 }
@@ -116,7 +131,7 @@ border: 2px solid rgb(160 160 160);
     .menu a {font-size: 18px;}
 }
 
-    .knopki {
+.knopki {
     font-weight: 600;
     color: #382b22;
     font-family: 'Oswald';
@@ -128,8 +143,8 @@ border: 2px solid rgb(160 160 160);
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-    
-    &::before {
+    }
+.knopki::before {
       position: absolute;
       content: '';
       width: 100%;
@@ -144,7 +159,8 @@ border: 2px solid rgb(160 160 160);
       transform: translate3d(0, 0.75em, -1em);
       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
     }
-    &:hover {
+  
+.knopki:hover {
       background: #ffeeee;
       transform: translate(0, 0.25em);
       cursor:pointer;
@@ -153,18 +169,16 @@ border: 2px solid rgb(160 160 160);
         transform: translate3d(0, 0.5em, -1em);
       }
     }
-    &:active {
+
+  
+.knopki:active {
       color: #ffffff;
       background: #000000;
       cursor:grabbing;
       transition: background-color 0.2s ease-in-out;
   }
-}
 
-th{
-  font-size: 130%;
-  
-}
+
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*Слайдеры*/
@@ -175,10 +189,13 @@ body input[type=range] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 180px;
+  width: 280px;
   background-color: transparent;
   outline: 3px   hsl(0, 0%, 0%);
-
+  border: 2px solid #b18597;
+  border-radius: 0.75em;
+  margin-top: 0.25vh;
+  margin-bottom: 2.5vh;
 }
 body input[type=range]:focus {
   outline-color: #f8b195;
@@ -190,7 +207,7 @@ body input[type=range]::-webkit-slider-runnable-track {
   appearance: none;
   height: 10px;
   background: linear-gradient(to right, #5555ff 0%, #ffa000 40%, #ff0000 90%);
-  box-shadow: 1px 1px 1em 2px #000000, -0.5px -0.5px 0.15em 0px #ffffff
+  box-shadow: 1px 1px 1em 2px #000000, -0.5px -0.5px 0.15em 0px #ffffff, 0 0 1em 1px #000;
 }
 
 /*Ползунок */
@@ -222,7 +239,8 @@ body input[type=range]::-webkit-slider-thumb:active {
   background: linear-gradient(to right, #aaa 0%, #bbb 50%, #ccc 90%);
   box-shadow: 2px 1px 1em 2px #000000, -0.5px -0.5px 0.1em 0px #cccccc  -webkit-appearance: none;
   text-align: center;
-}
+    }
+
 }
 
 /* Загрузка */
