--- a/css/index3css.css
+++ b/css/index3css.css
@@ -15,7 +15,7 @@ body {
 	background: linear-gradient(90deg,#826788,#826788);;
 	background-attachment: fixed;
 	background-size: 100%;
-  margin-left: 10%; /* Поставить такой же, как и ширину боковой панели */
+  margin-left: 11%; /* Поставить такой же, как и ширину боковой панели */
   font-family: 'Oswald';
   font-weight: 700;
 }
@@ -55,7 +55,7 @@ h1 {
 .menu {
   display: absolute;
   height: 100%; 
-  width: 10%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
+  width: 11%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
   position: fixed; /* Остается на месте при скролле */
   z-index: 1; 
   top: 1; 
@@ -69,7 +69,7 @@ h1 {
 	margin: 0;
 	padding: 0;
 	outline: none;
-	box-shadow: 0 0 0 7px #222222;
+	box-shadow: 0 0 0.15em 4px #000;
 }
 
 .menu table,.menu td{
@@ -117,7 +117,7 @@ h1 {
     margin-top: -3vh;
     width: 10%;
     height: 20%;
-    font-weight: 600;
+
     color: #382b22;
     font-family: 'Oswald';
     font-weight: 600;
@@ -128,6 +128,7 @@ h1 {
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+  
     }
 .knopki::before {
       position: absolute;
