--- a/css/site.css
+++ b/css/site.css
@@ -5,6 +5,8 @@
   font: optional: 'Ubuntu';
   margin: 0;
   padding: 0;
+  top: 0;
+  bottom: 0;
   outline: none;
   list-style-type: none;
 }
@@ -15,10 +17,15 @@
 
 
 body{
+  display: absolute;
+  position: inherit; 
+
+  height: 100%;
+  width: 87%;
+  margin-left: 12%;   /* Поставить такой же, как и ширину боковой панели */
   background: linear-gradient(270deg,#000,#3c030f);
-  background-attachment: fixed;
+  background-attachment: absolute;
   background-size: 100%;
-  margin-left: 10%; /* Поставить такой же, как и ширину боковой панели */
   color:#fff;
 }
 
@@ -27,7 +34,7 @@ body{
 .menu {
   display: absolute;
   height: 100%; 
-  width: 10%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
+  width: 11%; /* Ширина боковой панели (Изменить ширину body на такое же значение!) */
   position: fixed; /* Остается на месте при скролле */
   z-index: 1; 
   top: 1; 
@@ -42,7 +49,6 @@ body{
   padding: 0;
   outline: none;
   box-shadow: 0 0 0.15em 4px #000;
-
 }
 
 .menu table,.menu td{
@@ -59,7 +65,7 @@ body{
   text-decoration: none;
   color: #6F947E;
   display: grid;
-  margin-top:2vh; /* Расстояние между ссылками */
+  margin-top: 2vh; /* Расстояние между ссылками */
   text-shadow: 2px 2px #333, 4px 4px 4px #000;
 }
 
@@ -84,10 +90,12 @@ body{
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* Страница */
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
 /* Заголовок */
 .headesthead{
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   margin: 10px;
+  text-align: center;
 }
 
 table,tr,th{
@@ -97,10 +105,9 @@ table,tr,th{
 }
 
 
-
-.board, .Heat{
+#board,#Heat_2D_canvas {
   width: 700px;
-  width: 700px;
+  height: 700px; 
 }
 
 
@@ -112,16 +119,27 @@ table,tr,th{
   box-shadow:  10px 0 0.3em  0.2em #000;;
 }
 
+/* Надпись с управлением */
 .control{
   width: 100%;
   text-align: center;
-  color: #000;
-  background-color:#fff;
+  color: #fff;
+  background-color: #47957D;
+  font-weight: 600;
+  font-size: 160%;
+  background: linear-gradient(to left, #44e 0%, #000 37%,#000 65%, #c11 80%,#600 99%);
+  background-attachment: absolute;
+  background-size: 100%;
+  border-radius: 10px;
+  
+
 }
 
 .control td {
-border: 2px solid rgb(160 160 160);
-  padding: 10px 10px;
+border: 3px solid #000;
+padding: 10px 10px;
+border-radius: 10px;
+box-shadow: 0px 2px 10px 0em #000;
 }
 
 
@@ -132,52 +150,60 @@ border: 2px solid rgb(160 160 160);
 }
 
 .knopki {
-    font-weight: 600;
-    color: #382b22;
+    margin-top: 2vh;
+    color: #fff;
     font-family: 'Oswald';
     font-weight: 600;
     font-size: 120%;
     padding: 1.25em 2em;
-    background: #ffffff;
-    border: 2px solid #b18597;
+    background: #47957D;
+    border: 3px solid #022B1F;
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-    }
-.knopki::before {
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 90%;
-      top: 0px;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: #ffc4d2;
-      border-radius: inherit;
-      box-shadow: 0 0 0 2px #b18597, 0 0.25em 0 0 #ffe3e2;
-      transform: translate3d(0, 0.75em, -1em);
-      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-    }
-  
-.knopki:hover {
-      background: #ffeeee;
-      transform: translate(0, 0.25em);
-      cursor:pointer;
-      &::before {
-        box-shadow: 0 0 0 2px #b18597, 0 0.1em 0 0 #ffe3e2;
-        transform: translate3d(0, 0.5em, -1em);
-      }
+    min-width: 100%;
+    box-shadow:  2px 3px 0.6em 0 #000;
     }
 
-  
+.knopki:hover {
+      background: #4a1517;
+      color: #fff;
+      border: 3px ridge #170109;
+      transform: translate(0, 0.25em);
+      cursor:pointer;
+    }
 .knopki:active {
       color: #ffffff;
-      background: #000000;
+      background: #150007;
+      border: 1px ridge #000;
       cursor:grabbing;
       transition: background-color 0.2s ease-in-out;
   }
 
+  /* Кнопка "Очистить"  */
+  .clearbut{
+    margin-left: 7vh;
+    margin-top: 0;
+    min-width: 20%;
+  }
+
+  /* Темы */
+
+  .themetext{
+  text-align: left;
+  font-size: 120%;
+  font-weight: 600;
+  }
+
+  .theme{
+    font-family: 'Ubuntu';
+    width: 30px;
+    height: 30px;
+    padding: 0em 0em;
+    min-width: 25%;
+    min-height: 25%;
+    font-size: 100%;
+  }
 
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -214,7 +240,7 @@ body input[type=range]::-webkit-slider-runnable-track {
 body input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  border:  3px solid #fff;
+  border:  2px solid #fff;
   border-radius: 70%;
   height: 20px;
   width: 20px;
@@ -262,4 +288,36 @@ body input[type=range]::-webkit-slider-thumb:active {
     100% {
         transform: rotate(360deg);
     }
-    } 
+    }
+
+
+.forms {
+ background: #ecf0f3;
+  padding: 10px;
+  padding-left: 20px;
+  height: 50px;
+  font-size: 14px;
+  border-radius: 50px;
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
+}
+
+.forms:hover {
+      
+    }
+          
+.forms:focus {
+
+      }
+    
+.forms:valid {
+  border: 10px solid;
+  border-color: forestgreen;
+}
+
+
+
+.forms:invalid {
+   border: 10px solid;
+  border-color: firebrick;
+}
+
