--- a/css/site.css
+++ b/css/site.css
@@ -1,29 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 * {
   font-size: 100%;
-  font: optional: 'Ubuntu';
+  font-family: 'Oswald';
   margin: 0;
   padding: 0;
   top: 0;
   bottom: 0;
   outline: none;
   list-style-type: none;
+  font-weight: 600;
 }
 
-/* Проверка границtable,td,tr,th
-{border: 1px solid #fff;}*/
+/* Проверка границ 
+table,td,tr,th {border: 1px solid #fff;}*/
 
 
 
 body{
   display: absolute;
   position: inherit; 
-
+  font-family: 'Oswald';
   height: 100%;
   width: 87%;
   margin-left: 12%;   /* Поставить такой же, как и ширину боковой панели */
-  background: linear-gradient(270deg,#000,#3c030f);
+  background: linear-gradient(270deg,#000,#000);
   background-attachment: absolute;
   background-size: 100%;
   color:#fff;
@@ -44,7 +46,7 @@ body{
   padding-top: 20px;
   font-size: 180%;
   font-weight: 700;
-  font-family: 'Ubuntu';
+  font-family: 'Oswald';
   margin: 0;
   padding: 0;
   outline: none;
@@ -84,6 +86,7 @@ body{
     color: #C4CA98;
     display: grid;
     text-shadow: 2px 2px #333, 4px 4px 4px #000;
+    height: 10%;
 }
 
 
@@ -106,8 +109,7 @@ table,tr,th{
 
 
 #board,#Heat_2D_canvas {
-  width: 700px;
-  height: 700px; 
+  background-color: #000000;
 }
 
 
@@ -115,7 +117,7 @@ table,tr,th{
   border:5px solid #000000; 
   border-radius:7px; 
   margin-bottom: 5px;
-  background-color: #000000;
+  
   box-shadow:  10px 0 0.3em  0.2em #000;;
 }
 
@@ -182,7 +184,7 @@ box-shadow: 0px 2px 10px 0em #000;
 
   /* Кнопка "Очистить"  */
   .clearbut{
-    margin-left: 7vh;
+
     margin-top: 0;
     min-width: 20%;
   }
@@ -215,13 +217,15 @@ body input[type=range] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 280px;
+  width: 320px;
   background-color: transparent;
   outline: 3px   hsl(0, 0%, 0%);
-  border: 2px solid #b18597;
+  border: 3px solid #000;
   border-radius: 0.75em;
   margin-top: 0.25vh;
   margin-bottom: 2.5vh;
+  border-bottom: 5px solid #111;
+
 }
 body input[type=range]:focus {
   outline-color: #f8b195;
@@ -234,24 +238,29 @@ body input[type=range]::-webkit-slider-runnable-track {
   height: 10px;
   background: linear-gradient(to right, #5555ff 0%, #ffa000 40%, #ff0000 90%);
   box-shadow: 1px 1px 1em 2px #000000, -0.5px -0.5px 0.15em 0px #ffffff, 0 0 1em 1px #000;
+  border-radius: 1.75em;
+
 }
 
 /*Ползунок */
 body input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  border:  2px solid #fff;
+  border:  2px solid #ccc;
   border-radius: 70%;
   height: 20px;
   width: 20px;
   position: relative;
   bottom: 8px;
-  background: #000;
+  background: #333;
   background-size: 50%;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 1);
   cursor: grab;
+  box-shadow: inset 0 0 0 2px #1597ff;
 }
 body input[type=range]::-webkit-slider-thumb:active {
+  background: #000;
+  border:  2px solid #ccc;
   cursor: grabbing;
 }
 
@@ -266,8 +275,53 @@ body input[type=range]::-webkit-slider-thumb:active {
   box-shadow: 2px 1px 1em 2px #000000, -0.5px -0.5px 0.1em 0px #cccccc  -webkit-appearance: none;
   text-align: center;
     }
-
 }
+
+/*Значения ползунков*/
+#h4-container {
+  width: 300px;
+  max-width: 100%;
+  padding: 0 20px;
+}
+#h4-container #h4-subcontainer {
+  width: 100%;
+  position: relative;
+}
+#h4-container #h4-subcontainer h4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  margin-top: -6rem;
+  width: 40px;
+  height: 40px;
+  color: #fff !important;
+  font-size: 12px;
+  transform-origin: center 10px;
+  transition: margin-top 0.15s ease-in-out, opacity 0.15s ease-in-out;
+}
+#h4-container #h4-subcontainer h4 span {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #ff97ff;
+  border-radius: 100% 10% 0 ;
+  transform: rotate(45deg);
+  z-index: -1;
+}
+
+input:not(:active) + #h4-container h4 {
+  opacity: 0;
+  margin-top: 500px;
+  pointer-events: none;
+}
+
+
+
+
 
 /* Загрузка */
 .loader {
@@ -280,7 +334,6 @@ body input[type=range]::-webkit-slider-thumb:active {
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
     }
-
     @keyframes rotation {
     0% {
         transform: rotate(0deg);
@@ -290,6 +343,15 @@ body input[type=range]::-webkit-slider-thumb:active {
     }
     }
 
+/*Статусбар*/
+.statusheat {
+  color: #0f0;
+  border: 5px solid #fff;
+  width: 22%;
+  text-align: left;
+}
+
+/*Формы для заполнения*/
 
 .forms {
  background: #ecf0f3;
@@ -300,24 +362,20 @@ body input[type=range]::-webkit-slider-thumb:active {
   border-radius: 50px;
   box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
 }
-
 .forms:hover {
       
-    }
-          
+    }   
 .forms:focus {
 
-      }
-    
+      }   
 .forms:valid {
   border: 10px solid;
   border-color: forestgreen;
 }
-
-
-
 .forms:invalid {
-   border: 10px solid;
+  border: 10px solid;
   border-color: firebrick;
 }
+
+
 
