--- a/css/site.css
+++ b/css/site.css
@@ -13,8 +13,8 @@
   font-weight: 600;
 }
 
-/* Проверка границ 
-table,td,tr,th {border: 1px solid #fff;}*/
+/* Проверка границ */
+table,td,tr,th {border: 1px solid #fff;}
 
 
 
