--- a/css/site.css
+++ b/css/site.css
@@ -14,7 +14,7 @@
 }
 
 /* Проверка границ
-table,td,tr,th {border: 1px solid #000;}
+table,td,tr,th {border: 1px solid #000;}S
  */
 
 
@@ -23,8 +23,8 @@ body{
   position: inherit; 
   font-family: 'Oswald';
   height: 100%;
-  width: 87%;
-  margin-left: 11.5%;   /* Поставить такой же, как и ширину боковой панели */
+  width: 88%;
+  margin-left: 12%;   /* Поставить такой же, как и ширину боковой панели */
   background: linear-gradient(90deg,#384259,#384259);
   background-attachment: absolute;
   background-size: 100%;
@@ -170,7 +170,7 @@ box-shadow: 0px 2px 10px 0em #000;
     box-shadow:  2px 3px 0.6em 0 #000;
     }
 
-.knopki:hover,.theme:hover{
+.knopki:hover,.theme:hover,.activebuttonpause{
       background: #4a1517;
       color: #fff;
       border: 3px ridge #170109;
@@ -217,17 +217,11 @@ box-shadow: 0px 2px 10px 0em #000;
   }
 
  .activebutton{
-    font-family: 'Ubuntu';
-    width: 50px;
-    height: 50px;
-    padding: 0em 0em;
-    min-width: 50px;
-    font-size: 100%;
     color: #000;
-    border-radius: 3.6rem;
     background: #fff;
     border: 2px solid #000;
   }
+
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*Слайдеры*/
@@ -350,7 +344,6 @@ body input[type=range]::-webkit-slider-thumb:active {
 .h4time{
   &#h4-container{
   width: 400px;
-  border: 1px solid #fff;
   margin-left: 11.2rem;
 }
 }
