--- a/css/site.css
+++ b/css/site.css
@@ -199,8 +199,8 @@ box-shadow: 0px 2px 10px 0em #000;
     .menu a {font-size: 18px;}
 }
 
-.knopki {
-    margin-top: 2vh;
+.knopki{
+    margin-bottom: -0.4vh;
     color: #000;
     font-family: 'Oswald';
     font-weight: 400;
@@ -213,7 +213,7 @@ box-shadow: 0px 2px 10px 0em #000;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
     min-width: 100%;
     box-shadow:  2px 3px 0.23em 0 #000;
-
+    width: 150px;
     }
 
 .knopki:hover,.activebuttonpause{
@@ -246,15 +246,17 @@ box-shadow: 0px 2px 10px 0em #000;
   .theme{
     font-family: 'Oswald';
     min-width: 40px;
+    width: 50px;
     font-size: 90%;
     color: #000;
-    border-radius: 3.6rem;
-
+    border-radius: 1rem;
     border: 2px solid #000;
     text-align: center;
     font-weight: 300;
     background: #C2B396;
     border: 5px double #162037;
+    transform-style: preserve-3d;
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
   }
 
   .theme:hover{
@@ -344,7 +346,6 @@ body input[type=range]::-webkit-slider-thumb:active {
 
 
 /*Ползунок со временем */
-
 #ctlTime{
   width: 420px;
   &::-webkit-slider-runnable-track {
